include/maplibre_native_c/texture.h


typedef struct mln_metal_owned_texture_descriptor {
  uint32_t size;
  mln_render_target_extent extent;
  mln_metal_context_descriptor context;
} mln_metal_owned_texture_descriptor;
typedef struct mln_metal_borrowed_texture_descriptor {
  uint32_t size;
  mln_render_target_extent extent;
  uint32_t physical_width;
  uint32_t physical_height;
  void* texture;
} mln_metal_borrowed_texture_descriptor;
typedef struct mln_metal_owned_texture_frame {
  uint32_t size;
  uint64_t generation;
  uint32_t width;
  uint32_t height;
  double scale_factor;
  uint64_t frame_id;
  void* texture;
  void* device;
  uint64_t pixel_format;
} mln_metal_owned_texture_frame;
typedef struct mln_vulkan_owned_texture_descriptor {
  uint32_t size;
  mln_render_target_extent extent;
  mln_vulkan_context_descriptor context;
} mln_vulkan_owned_texture_descriptor;
typedef struct mln_vulkan_borrowed_texture_descriptor {
  uint32_t size;
  mln_render_target_extent extent;
  uint32_t physical_width;
  uint32_t physical_height;
  mln_vulkan_context_descriptor context;
  void* image;
  void* image_view;
  uint32_t format;
  uint32_t initial_layout;
  uint32_t final_layout;
} mln_vulkan_borrowed_texture_descriptor;
typedef struct mln_vulkan_owned_texture_frame {
  uint32_t size;
  uint64_t generation;
  uint32_t width;
  uint32_t height;
  double scale_factor;
  uint64_t frame_id;
  void* image;
  void* image_view;
  void* device;
  uint32_t format;
  uint32_t layout;
} mln_vulkan_owned_texture_frame;
typedef struct mln_opengl_owned_texture_descriptor {
  uint32_t size;
  mln_render_target_extent extent;
  mln_opengl_context_descriptor context;
} mln_opengl_owned_texture_descriptor;
typedef struct mln_opengl_borrowed_texture_descriptor {
  uint32_t size;
  mln_render_target_extent extent;
  uint32_t physical_width;
  uint32_t physical_height;
  mln_opengl_context_descriptor context;
  uint32_t texture;
  uint32_t target;
} mln_opengl_borrowed_texture_descriptor;
typedef struct mln_opengl_owned_texture_frame {
  uint32_t size;
  uint64_t generation;
  uint32_t width;
  uint32_t height;
  double scale_factor;
  uint64_t frame_id;
  uint32_t texture;
  uint32_t target;
  uint32_t internal_format;
  uint32_t format;
  uint32_t type;
} mln_opengl_owned_texture_frame;
typedef struct mln_texture_image_info {
  uint32_t size;
  uint32_t width;
  uint32_t height;
  uint32_t stride;
  size_t byte_length;
} mln_texture_image_info;
MLN_API mln_metal_owned_texture_descriptor
mln_metal_owned_texture_descriptor_default(void) MLN_NOEXCEPT;
MLN_API mln_metal_borrowed_texture_descriptor
mln_metal_borrowed_texture_descriptor_default(void) MLN_NOEXCEPT;
MLN_API mln_vulkan_owned_texture_descriptor
mln_vulkan_owned_texture_descriptor_default(void) MLN_NOEXCEPT;
MLN_API mln_vulkan_borrowed_texture_descriptor
mln_vulkan_borrowed_texture_descriptor_default(void) MLN_NOEXCEPT;
MLN_API mln_opengl_owned_texture_descriptor
mln_opengl_owned_texture_descriptor_default(void) MLN_NOEXCEPT;
MLN_API mln_opengl_borrowed_texture_descriptor
mln_opengl_borrowed_texture_descriptor_default(void) MLN_NOEXCEPT;
MLN_API mln_texture_image_info
mln_texture_image_info_default(void) MLN_NOEXCEPT;
MLN_API mln_status mln_metal_owned_texture_attach(
  mln_map* map, const mln_metal_owned_texture_descriptor* descriptor,
  mln_render_session** out_session
) MLN_NOEXCEPT;
MLN_API mln_status mln_metal_borrowed_texture_attach(
  mln_map* map, const mln_metal_borrowed_texture_descriptor* descriptor,
  mln_render_session** out_session
) MLN_NOEXCEPT;
MLN_API mln_status mln_vulkan_owned_texture_attach(
  mln_map* map, const mln_vulkan_owned_texture_descriptor* descriptor,
  mln_render_session** out_session
) MLN_NOEXCEPT;
MLN_API mln_status mln_vulkan_borrowed_texture_attach(
  mln_map* map, const mln_vulkan_borrowed_texture_descriptor* descriptor,
  mln_render_session** out_session
) MLN_NOEXCEPT;
MLN_API mln_status mln_opengl_owned_texture_attach(
  mln_map* map, const mln_opengl_owned_texture_descriptor* descriptor,
  mln_render_session** out_session
) MLN_NOEXCEPT;
MLN_API mln_status mln_opengl_borrowed_texture_attach(
  mln_map* map, const mln_opengl_borrowed_texture_descriptor* descriptor,
  mln_render_session** out_session
) MLN_NOEXCEPT;
MLN_API mln_status mln_texture_read_premultiplied_rgba8(
  mln_render_session* session, uint8_t* out_data, size_t out_data_capacity,
  mln_texture_image_info* out_info
) MLN_NOEXCEPT;
MLN_API mln_status mln_metal_owned_texture_acquire_frame(
  mln_render_session* session, mln_metal_owned_texture_frame* out_frame
) MLN_NOEXCEPT;
MLN_API mln_status mln_metal_owned_texture_release_frame(
  mln_render_session* session, const mln_metal_owned_texture_frame* frame
) MLN_NOEXCEPT;
MLN_API mln_status mln_vulkan_owned_texture_acquire_frame(
  mln_render_session* session, mln_vulkan_owned_texture_frame* out_frame
) MLN_NOEXCEPT;
MLN_API mln_status mln_vulkan_owned_texture_release_frame(
  mln_render_session* session, const mln_vulkan_owned_texture_frame* frame
) MLN_NOEXCEPT;
MLN_API mln_status mln_opengl_owned_texture_acquire_frame(
  mln_render_session* session, mln_opengl_owned_texture_frame* out_frame
) MLN_NOEXCEPT;
MLN_API mln_status mln_opengl_owned_texture_release_frame(
  mln_render_session* session, const mln_opengl_owned_texture_frame* frame
) MLN_NOEXCEPT;